<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".BookMenuActivity"
    tools:deviceIds="wear">
    <androidx.wear.widget.CircularProgressLayout
        android:id="@+id/addBookLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:indeterminate="true"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/addBookScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:boxedEdges="all">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/addBookTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/addBook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addBookDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addBookDesc"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addBookTextView" />

            <EditText
                android:id="@+id/addBookEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@id/addBookDescTextView"
                tools:text="https://" />

            <ImageView
                android:id="@+id/returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_return"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBookEditText"
                android:contentDescription="@string/returnToBooks" />

            <ImageButton
                android:id="@+id/addBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addBookEditText"
                android:contentDescription="@string/addBook" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>