<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="#000000"
    tools:context=".AddBookActivity"
    tools:deviceIds="wear">
    <androidx.wear.widget.CircularProgressLayout
        android:id="@+id/bookMenuLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:indeterminate="true"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/bookMenuScrollView"
        app:boxedEdges="all"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bookMenuActivityNameTextView"
                android:textAlignment="center"
                tools:text="Book" />
            <LinearLayout
                android:id="@+id/refreshBookLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/refreshBook"
                    android:src="@drawable/ic_refresh" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/refreshBook" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/deleteBookLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/deleteBook"
                    android:src="@drawable/ic_delete" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/deleteBook" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/returnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/returnToBooks"
                    android:src="@drawable/ic_return" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/returnToBooks" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>